<resources>
    <string name="app_name">Natural Render-Vous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toi_da_co_tai_khoan">Tôi đã có tài khoản</string>
    <string name="dang_ky_moi">Đăng ký tài khoản</string>
    <string name="ma_gioi_thieu">Mã Giới Thiệu Của Bạn</string>
    <string name="noi_dung_ma_gioi_thieu">Xin vui lòng nhập mã của người giới thiệu bạn</string>
    <string name="ma_nguoi_gioi_thieu">Mã người giới thiệu</string>
    <string name="next">Tiếp tục</string>
    <string name="sdt">Số điện thoại</string>
    <string name="for_got_pass">Quên mât khẩu</string>
    <string name="pass">Mật khẩu</string>
    <string name="pass2">Nhập lại mật khẩu</string>
    <string name="pass3">Nhập mật khẩu cũ</string>
    <string name="pass4">Nhập mật khẩu mới</string>
    <string name="pass5">Nhập lại mật khẩu mới</string>
    <string name="nhan_ten_su_dung">Vui lòng nhập tên sử dụng</string>
    <string name="nhap_so_dien_thoai">Vui lòng nhập số điện thoại đăng ký</string>
    <string name="nhap_pass">Nhập mật khẩu</string>
    <string name="nhap_pass2">Nhập lại mật khẩu</string>
    <string name="xac_nhan">Xác Nhận</string>
    <string name="noi_dung_otp">Mã OTP (Được gửi qua tin nhắn)</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="nhap_sdt">Nhập số điện thoại đăng nhập</string>
    <string name="nhap_email">Nhập email</string>
    <string name="info_user">Thông Tin Tài Khoản</string>
    <string name="xin_chao">Xin chào\nbạn là ...</string>
    <string name="ban_quan_tam">Bạn quan tâm đến chủ đề ?</string>
    <string name="tai_len_video">Tải lên video</string>
    <string name="mentor">Mentor</string>
    <string name="video_cua_mentor">Video của Mentor</string>
    <string name="cotent_upload">Video tỉ lệ 9:16, độ phân giải 1080x1920\nđịnh dạng dọc (vertical) sẽ cho chất lượng hiển thị tốt nhất</string>
    <string name="them_anh_thumbnail">Thêm ảnh thumbnail</string>
    <string name="tai_len_anh">Tải lên ảnh</string>
    <string name="tieu_de_video">Tiêu đề video</string>
    <string name="nhap_tieu_de_video">Nhập tiêu đề video</string>
    <string name="luu_thong_tin">Lưu thông tin</string>
    <string name="thay_doi_thong_tin">Thay đổi thông tin cá nhân</string>
    <string name="thay_doi_pass">Thay đổi mật khẩu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="thay_doi_avatar">Tải lên ảnh đại diện</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="truy_cap">TRUY CẬP</string>
    <string name="gui_otp">Gửi mã OTP</string>
    <string name="khach_hang_thong_thai">KHÁCH HÀNG THÔNG THÁI</string>
    <string name="nguoi_truyen_su_that">NGƯỜI TRUYỀN SỰ THẬT</string>
    <string name="nguoi_truyen_yeu_thuong">NGƯỜI TRUYỀN YÊU THƯƠNG</string>
    <string name="mat_khau_su_dung">Mật khẩu sử dụng</string>

    <string name="TAB1">Showroom</string>
    <string name="TAB2">Thành viên</string>
    <string name="TAB3">Khách hàng</string>
    <string name="TAB4">Thu nhập</string>
    <string name="TAB5">Giỏ hàng</string>
    <string name="thuong_hieu">Thương hiệu đến từ Pháp</string>
    <string name="xem_tat_ca">xem tất cả</string>
    <string name="san_pham_cung_thuong_hieu">Sản phẩm cùng thương hiệu</string>
    <string name="gia_ban">Giá bán</string>
    <string name="gioi_thieu_san_pham">Giới thiệu sản phẩm</string>
    <string name="mua_hang">Thêm vào giỏ hàng</string>
    <string name="mua_hang2">Mua hàng</string>
    <string name="tro_gia">Trợ giá</string>
    <string name="so_luong">Số lượng</string>
    <string name="them_vao_gio_hang">Thêm vào giỏ hàng</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="dia_chi_nhan_hang">Địa chỉ nhận hàng</string>
    <string name="thong_tin_don_hang">Thông tin đơn hàng</string>
    <string name="hinh_thuc_thanh_toan">Hình thức thanh toán</string>
    <string name="phat_hang_thu_tien">Phát hàng thu tiền</string>
    <string name="chuyen_khoan">Chuyển khoản</string>
    <string name="tong_tien_thanh_toan">Tổng tiền thanh toán</string>
    <string name="thong_tin_ngan_hang_chuyen_khoan">Thông tin ngân hàng chuyển khoản</string>
    <string name="gio_hang_trong">Giỏ hàng trống!</string>
    <string name="gio_hang">Giỏ hàng</string>
    <string name="don_hang">Đơn hàng</string>
    <string name="them_dia_chi_moi">Thêm địa chỉ mới</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="dat_lam_mac_dinh">Đặt làm mặc định</string>
    <string name="xem_thong_tin_don_hang">Xem thông tin đơn hàng</string>
    <string name="ten_hien_thi">Tên hiển thị</string>
    <string name="nhap_dia_chi">Nhập địa chỉ</string>
    <string name="mat_khau_cu">Mật khẩu cũ</string>
    <string name="ma_don_hang">Mã đơn hàng</string>
    <string name="thoi_gian_dat">Thời gian đặt</string>
    <string name="thoi_gian_thanh_toan">Thời gian thanh toán</string>
    <string name="neu_da_thanh_toan">nếu đã thanh toán</string>
    <string name="neu_da_hoan_thanh">nếu đã hoàn thành</string>
    <string name="thoi_gian_hoan_thanh">Thời gian hoàn thành</string>
    <string name="lich_su_giao_dich">Lịch sử giao dịch</string>
    <string name="dat_hang">Đặt hàng</string>
    <string name="cau_chuyen_lien_quan">Câu chuyện liên quan</string>
    <string name="tin_tuc_san_pham">Tin tức sản phẩm</string>
    <string name="title_activity_update_app">UpdateAppActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chon_tinh_thanh">Chọn tỉnh thành</string>
    <string name="chon_quan_huyen">Chọn quận huyện</string>
    <string name="quan_huyen">Quận huyện</string>
    <string name="tinh_thanh">Tỉnh thành</string>
    <string name="chon_phuong_xa">Chọn phường xã</string>
    <string name="phuong_xa">Phường xã</string>
</resources>