<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ChangePassFragment">

    <include layout="@layout/view_top_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            style="@style/TextGreen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:text="@string/mat_khau_cu"
            android:textSize="16sp" />

        <com.newsoft.nscustomview.edittext.NSEdittext
            android:id="@+id/edtPassOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_white_line_rd5"
            android:hint="@string/pass3"
            android:imeOptions="actionNext"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text"
            android:textSize="14sp"
            app:errorText="@string/nhap_pass"
            app:inputType="pass" />

        <TextView
            style="@style/TextGreen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:text="Mật khẩu mới"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <com.newsoft.nscustomview.edittext.NSEdittext
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_white_line_rd5"
            android:hint="@string/pass4"
            android:imeOptions="actionNext"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text"
            android:textSize="14sp"
            app:errorText="@string/pass4"
            app:inputType="pass" />

        <TextView
            style="@style/TextGreen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:text="@string/pass2"
            android:textSize="16sp" />

        <com.newsoft.nscustomview.edittext.NSEdittext
            android:id="@+id/edtPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_white_line_rd5"
            android:hint="@string/pass5"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text"
            android:textSize="14sp"
            app:errorText="@string/pass5"
            app:inputType="pass" />

        <carbon.widget.TextView
            android:id="@+id/btnSave"
            style="@style/TextGreen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="@dimen/_90sdp"
            android:layout_marginBottom="@dimen/_90sdp"
            android:background="@drawable/shape_white_line_blue_rd500"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/cap_nhat"
            app:carbon_rippleColor="@color/white"
            app:carbon_elevationShadowColor="@color/shadow" />


    </LinearLayout>


</LinearLayout>